instagram link corercted; giph added from file instead of webpage

--- a/Kumple.html
+++ b/Kumple.html
@@ -18,7 +18,8 @@
         <td><a href="index.html">Home</a></td>
         <td><a href="Kumple.html">Kumple</a></td>
         <td><a href="Smaczki.html">Smaczki</a></td>
-        <td><a href="https://www.instagram.com/kroksio_kudlaty/?hl=pl">Insta</a></td>
+        <td><a href="https://www.instagram.com/kroksio_kudlaty/?hl=pl">
+            <img class="instagram-icon" src="images/instagram-icon.png" alt=""></a></td>
       </tr>
     </table>
   </div>
