--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <br>
   </div>
   <div class="container-giph">
-    <img class="giph" src="https://media2.giphy.com/media/BaXGp5MYoqjRK/giphy.webp?cid=ecf05e47038a12a7b01fa2748ce70b6d274bc02a38bdb837&rid=giphy.webp" alt="giph">
+    <img class="giph" src="images/giphy.webp" alt="giph">
   </div>
 
   <br><br><br>
