--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <br>
   </div>
   <div class="container-giph">
-    <img class="giph" src="images/giphy.webp" alt="giph">
+    <img class="giph" src="https://media.giphy.com/media/BaXGp5MYoqjRK/giphy.gif" alt="giph">
   </div>
 
   <br><br><br>
