--- a/index.html
+++ b/index.html
@@ -36,13 +36,14 @@
     <br>
   </div>
   <div class="container-giph">
-    <img class="giph" src="https://media.giphy.com/media/BaXGp5MYoqjRK/giphy.gif" alt="giph">
+    <img class="giph" src="images/giphy.webp" alt="giph">
   </div>
 
   <br><br><br>
 
 
   <div class="footer">
+    <a href="https://wojtekdawidczyk.github.io/kroksio-kudlaty/index.html">old website</a>
     <p class="copyright">©2020 Wojciech Dawidczyk. All rights reserved.</p>
   </div>
 
