--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 
   <div class="footer">
-    <a href="https://wojtekdawidczyk.github.io/kroksio-kudlaty/index.html">old website</a>
+    <a class="a-old-website" href="https://wojtekdawidczyk.github.io/kroksio-kudlaty/index.html">old website</a>
     <p class="copyright">©2020 Wojciech Dawidczyk. All rights reserved.</p>
   </div>
 
